crates/onebrain-cli/tests/snapshots/snapshots__session_init_block.snap
---
source: crates/onebrain-cli/tests/snapshots.rs
expression: normalize_volatile(raw)
---
{
  "decision": "block",
  "reason": "onebrain-vault-not-found"
}
