crates/onebrain-cli/tests/snapshots/snapshots__session_init_minimal_vault.snap
---
source: crates/onebrain-cli/tests/snapshots.rs
expression: normalize_volatile(raw)
---
{
  "datetime": "<NORMALIZED>",
  "session_token": "<NORMALIZED>",
  "search_unembedded": null,
  "qmd_unembedded": null,
  "headless": false
}
