crates/onebrain-cli/tests/snapshots/snapshots__update_check_dry_run.snap
---
source: crates/onebrain-cli/tests/snapshots.rs
expression: joined
---
OneBrain Update
current: v1.10.18
latest: v9.9.9
done: dry run complete — no changes made
