crates/onebrain-cli/tests/snapshots/snapshots__update_full_upgrade_success.snap
---
source: crates/onebrain-cli/tests/snapshots.rs
expression: joined
---
OneBrain Update
current: v1.10.18
latest: v2.0.0
upgrading: @onebrain-ai/cli v2.0.0 installed
done: to sync the plugin run /update (in Claude) or `onebrain plugin update`
